# Azure-Kinect-Samples

body-tracking-samples/simple_3d_viewer/: CMakeLists.txt  main.cpp
body-tracking-samples/simple_3d_viewer/lcm/: class_cloud_t.hpp  joint_lcm.hpp  joint_lcm.lcm  multi_sparse_cloud_t.hpp  multi_sparse_cloud_t.lcm  skeleton_lcm.hpp
